tests/tests/ui/err/greedy-without-config.stderr
error: This pattern contains an unbounded greedy dot repetition, i.e. `.*` or `.+` (or a character class that is equivalent to a dot, i.e., `[^\n]*`). This will cause the entirety of the input to be read for every token. Consider making your repetition non-greedy or changing it to a more specific character class. If this is the intended behavior, add #[regex(..., allow_greedy = true)] or#[logos(skip(..., allow_greedy = true))]
 --> tests/ui/err/greedy-without-config.rs:8:13
  |
8 |     #[regex("(a|b.*)")]
  |             ^^^^^^^^^

error: This pattern contains an unbounded greedy dot repetition, i.e. `.*` or `.+` (or a character class that is equivalent to a dot, i.e., `[^\n]*`). This will cause the entirety of the input to be read for every token. Consider making your repetition non-greedy or changing it to a more specific character class. If this is the intended behavior, add #[regex(..., allow_greedy = true)] or#[logos(skip(..., allow_greedy = true))]
  --> tests/ui/err/greedy-without-config.rs:13:14
   |
13 | #[logos(skip r".+")]
   |              ^^^^^
